--- a/tutorials/tutorial1/references.bib
+++ b/tutorials/tutorial1/references.bib
@@ -36,3 +36,12 @@ PMID: 32929009},
 	pages = {31},
 	langid = {en}
 }
+
+@article{leasure2020a,
+	title = {National population mapping from sparse survey data: A hierarchical Bayesian modeling framework to account for uncertainty},
+	author = {{Leasure}, {Douglas R} and {Jochem}, {Warren C} and {Weber}, {Eric M} and {Seaman}, {Vincent} and {Tatem}, {Andrew J}},
+	year = {2020},
+	date = {2020},
+	journal = {Proceedings of the National Academy of Sciences},
+	note = {Publisher: National Acad Sciences}
+}
